# Fallout-4-advanced-AI

./: .gitignore  ALL_COMPLETE_SUMMARY.md  BUILD_TOOLS_SUMMARY.md  BUNDLED_MODEL_SOLUTION.md  BUNDLE_PIPER_GUIDE.md  CK_BUILD_GUIDE.md  COMPLETE_ACTION_PLAN.md  CRITICAL_GAP_ANALYSIS.md  DOCUMENTATION_INDEX.md  DOWNLOAD_COMPONENTS_GUIDE.md  F4AI_AutoStart.bat  FINAL_STATUS_PIPER_FIX.md  FRAMEWORK_MASTERS.md  GITHUB_PUSH_SUCCESS.md  INSTALL.md  LICENSE  MOSSY_INDUSTRIES_REBRAND_COMPLETE.md  NEXUS_RELEASE_CHECKLIST.md  NEXUS_RELEASE_DEEP_SCAN_REPORT.md  PIPER_FIX_COMPLETE.md  QUICK_START_BUILD.md  README.md  READ_ME_FIRST_CRITICAL_UPDATE.md  START_HERE.md  VERSION  build_executable.bat  build_release.bat  compile_papyrus.bat  deploy_to_mo2.bat  download_koboldcpp.bat  download_koboldcpp_improved.ps1  download_model.bat  download_model_improved.ps1  download_piper.bat  dProjectsFallout-4-advanced-AIcompile_out_eco.txt  fix_legacy_papyrus.py  patch_mo2_config.bat  pyproject.toml  rebuild_for_mo2.bat  rebuild_from_mo2.bat  (+4 more)
.claude/: settings.json
bridge/: acoustic_engine.py  advanced_memory_systems.py  conversation_generator.py  creature_ecology.py  ecosystem_adaptor.py  environment_simulation.py  f4ai_scanner.py  glow_spore_engine.py  learning_engine.py  lighting_engine.py  mod_detector.py  mossy_fo4_bridge.py  performance_optimizer.py  settlement_evolution.py  start_fo4_bridge.bat  water_simulation.py  wildlife_simulation.py  (+1 more)
f4se_plugin/: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  build_dll.bat  compile_direct.bat  f4se_src_path.txt
f4se_plugin/src/: MiscUtil.cpp
(+271 files in other folders)
